Python 조건문( Conditional )에 대해 알아봅시다

--- a/25HC_0327_python_conditional.ipynb
+++ b/25HC_0327_python_conditional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0ZNAqhuaZcR3/GpSqWwqI",
+      "authorship_tag": "ABX9TyOJ5O8yWXgQ2sCk2tUgSxb0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -858,12 +858,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# python 은 객체지향 언어입니다\n",
+        "\n",
+        "a = 1\n",
+        "print(type(a))"
+      ],
       "metadata": {
-        "id": "7vDeeGWyZyNw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7vDeeGWyZyNw",
+        "outputId": "fa374bd3-759e-4f75-de50-4b3288a2be7f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
     }
   ]
 }
