Python 조건문 학습

--- a/25HC_0327_python_conditional.ipynb
+++ b/25HC_0327_python_conditional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJ5O8yWXgQ2sCk2tUgSxb0",
+      "authorship_tag": "ABX9TyOkixwwxoSm6Bm+XOlyRYvp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -869,9 +869,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7vDeeGWyZyNw",
-        "outputId": "fa374bd3-759e-4f75-de50-4b3288a2be7f"
+        "outputId": "3b9bd368-2845-4c6e-93ae-05436d27a4ff"
       },
-      "execution_count": 59,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,6 +881,253 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### for문의 List Comprehension (리스트 컴프리헨션) 사용\n",
+        "\n",
+        "    [ 리스트항목 for i in 목록 ]\n",
+        "\n",
+        "    ❤️ 맨 앞에는 리스트 항목이 해야할 일\n",
+        "    ❤️ 뒤에는 for문?\n",
+        "\n",
+        "    [ 표현식 for 항목 in 반복가능한 객체 if 조건문 ]\n",
+        "\n",
+        "    ❤️ if 조건문 부분은 생략이 가능하다\n",
+        "    ❤️ 표현식 부분은 항목을 이용한 수식, 표현식"
+      ],
+      "metadata": {
+        "id": "DtIi1pPUeAiy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list 안에 for문 사용하기 - a에 있는 항목을 각각 3배 한다고 치자\n",
+        "\n",
+        "## 원래 하던 대로\n",
+        "print(\"그냥 하던대로 리스트에 각각 3배 곱해보기\")\n",
+        "\n",
+        "comp1 = [1, 2, 3, 4]\n",
+        "c1 = []\n",
+        "\n",
+        "for i in comp1:\n",
+        "    c1.append(i*3)\n",
+        "\n",
+        "print(c1)\n",
+        "\n",
+        "\n",
+        "## 컴프리헨션 써보기\n",
+        "print(\"\\nList Comprehension\")\n",
+        "\n",
+        "comp_test = [1, 2, 3, 4]\n",
+        "c2 = [i*3 for i in comp_test]\n",
+        "print(c2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5rmXUOf7eKKx",
+        "outputId": "0535bc01-c26a-4f71-e617-63f5d5144a70"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "그냥 하던대로 리스트에 각각 3배 곱해보기\n",
+            "[3, 6, 9, 12]\n",
+            "\n",
+            "List Comprehension\n",
+            "[3, 6, 9, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List Comprehension 에 조건 사용하기\n",
+        "\n",
+        "comp2_test = list(range(1,20))\n",
+        "\n",
+        "result = [ i*3 for i in comp2_test if i%2 == 0]\n",
+        "        # 한 줄로 조건을 만들어주기\n",
+        "\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LIFHUeoKfEJ6",
+        "outputId": "700ffbb1-283f-49f1-c890-6895348f6257"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6, 12, 18, 24, 30, 36, 42, 48, 54]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### List comprehension 의 중첩 반복문"
+      ],
+      "metadata": {
+        "id": "yyn8wCrzgjrC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 이중 for문을 하나의 리스트로 정리해준거라고 생각하자!\n",
+        "[\n",
+        "    i * j\n",
+        "    for i in range(1, 5)\n",
+        "    for j in range(1, 10)\n",
+        "]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WMJ-n66FhwBk",
+        "outputId": "94b41a8f-9cc1-4d0d-bc96-bd45ad9fdeb6"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1,\n",
+              " 2,\n",
+              " 3,\n",
+              " 4,\n",
+              " 5,\n",
+              " 6,\n",
+              " 7,\n",
+              " 8,\n",
+              " 9,\n",
+              " 2,\n",
+              " 4,\n",
+              " 6,\n",
+              " 8,\n",
+              " 10,\n",
+              " 12,\n",
+              " 14,\n",
+              " 16,\n",
+              " 18,\n",
+              " 3,\n",
+              " 6,\n",
+              " 9,\n",
+              " 12,\n",
+              " 15,\n",
+              " 18,\n",
+              " 21,\n",
+              " 24,\n",
+              " 27,\n",
+              " 4,\n",
+              " 8,\n",
+              " 12,\n",
+              " 16,\n",
+              " 20,\n",
+              " 24,\n",
+              " 28,\n",
+              " 32,\n",
+              " 36]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 짝수만 제곱해서 리스트 만들기\n",
+        "\n",
+        "[\n",
+        "    i ** 2\n",
+        "    for i in range(10) if x % 2 == 0\n",
+        "]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lxrihc9YiBuh",
+        "outputId": "dd7f75f8-9b6c-4447-a2ab-7d46117e4e82"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# zip 을 사용해보자\n",
+        "\n",
+        "zip_list1 = [1, 2, 3]\n",
+        "zip_list2 = [10, 20, 30]\n",
+        "\n",
+        "[\n",
+        "    i + j\n",
+        "    for i, j in zip(zip_list1, zip_list2)  # 튜플에서 꺼낸다는 의미\n",
+        "]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3HJWCZPqiacD",
+        "outputId": "69956b7f-d33a-4c1a-de32-681de736ad4e"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[11, 22, 33]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stuNm = ['서연', '아인', '정근']\n",
+        "stuSc = [61, 78, 92]"
+      ],
+      "metadata": {
+        "id": "Xwyg_bNOjRna"
+      },
+      "execution_count": 82,
+      "outputs": []
     }
   ]
 }
